[package]
name = "hanabi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "hanabi"
path = "src/rust/main.rs"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.9.0", features = ["http2", "openssl"] }
chrono = { version = "0.4.40", features = ["std"] }
openssl = "0.10.66"
rusqlite = "0.33.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
git2 = "0.20.1"
openssl = "0.10.70"
rusqlite = "0.33.0"
